:recycle: Refactor: Service 코드 보완
dto 메서드명 수정 및 DeletedAt 검증 추가